@@ -10,6 +10,8 @@ $Id$
 	Clarify calculation precedence (cppcheck: clarifyCalculation).
 	Use C++-style casts for pointer types (cppcheck: cstyleCast).
 	Remove duplicate on both sides of '||' (cppcheck: duplicateExpression).
+	Declare ctors with one argument as 'explicit'
+	(cppcheck: noExplicitConstructor).
 
 2015-10-14  Christian Franke  <franke@computer.org>
 
